generated/manifests/prod-axon/radarr/Deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 036686ddf513031cf1fb9ac8a8b17a402ef2835a959fb01006ff2b0e8a3b55d9
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
        den.observability/file-tailed: "true"
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - radarr
            - --log-level
            - warn
          image: ghcr.io/onedr0p/exportarr@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          name: exportarr
          ports:
            - containerPort: 9707
              name: metrics
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /config/MediaCover
              name: metadata
              subPath: media/metadata/radarr/MediaCover
            - mountPath: /scratch
              name: scratch
        - args:
            - run
            - /etc/alloy/config.alloy
            - --storage.path=/config/.alloy
            - --server.http.listen-addr=127.0.0.1:12345
          image: docker.io/grafana/alloy@sha256:b8ec653c44235fbe910879145dac3597d66b0aaecf60bcbbe82580767771a839
          name: logtail
          securityContext:
            runAsGroup: 65536
            runAsUser: 1027
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /etc/alloy/config.alloy
              name: logtail
              readOnly: true
              subPath: config.alloy
            - mountPath: /config/MediaCover
              name: metadata
              subPath: media/metadata/radarr/MediaCover
            - mountPath: /scratch
              name: scratch
        - env:
            - name: PGID
              value: "65536"
            - name: PUID
              value: "1027"
            - name: RADARR__AUTH__APIKEY
              valueFrom:
                secretKeyRef:
                  key: radarr
                  name: media-arr-api-keys
            - name: RADARR__AUTH__METHOD
              value: External
            - name: RADARR__LOG__ROTATE
              value: "2"
            - name: RADARR__LOG__SIZELIMIT
              value: "1"
            - name: RADARR__POSTGRES__HOST
              value: media-pg-rw
            - name: RADARR__POSTGRES__LOGDB
              value: radarr-log
            - name: RADARR__POSTGRES__MAINDB
              value: radarr-main
            - name: RADARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: media-pg-radarr-password
            - name: RADARR__POSTGRES__PORT
              value: "5432"
            - name: RADARR__POSTGRES__USER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: media-pg-radarr-password
            - name: TZ
              value: America/Los_Angeles
          image: linuxserver/radarr@sha256:3dd76598062a35693e3817e6843878ea2384eed5780b52c025bc59d898d6e7df
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /config/MediaCover
              name: metadata
              subPath: media/metadata/radarr/MediaCover
            - mountPath: /scratch
              name: scratch
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: radarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr
        - name: data
          persistentVolumeClaim:
            claimName: media-data-nfs
        - configMap:
            name: radarr
          name: logtail
        - name: metadata
          persistentVolumeClaim:
            claimName: media-data-nfs
        - name: scratch
          persistentVolumeClaim:
            claimName: media-scratch-nfs
