generated/manifests/prod-axon/radarr/CiliumNetworkPolicy-allow-metrics-ingress-radarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-ingress-radarr
  namespace: media
spec:
  description: Allow Prometheus to scrape radarr's exportarr sidecar (9707).
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9707"
              protocol: TCP
